istio-system/70-request.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: authn
  namespace: dpd-fe-ns
spec:
  jwtRules:
    - issuer: {your cognito URL}
      jwksUri: {yout cognito path}
