istio-system/50-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dpd-istio-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"                                                       
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dpd-istio-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - dpd-istio-gw
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: "dpd-fe-svc.dpd-fe-ns.svc.cluster.local"
        port:
          number: 3000
