istio-system/60-service-entry-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dpd-rds-service-entry
spec:
  hosts:
  - dpd-rds.cluster-cbq4qy2gcxdj.ap-northeast-2.rds.amazonaws.com
  ports:
  - number: 3306
    name: mysql
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dpd-rds-readonly-service-entry
spec:
  hosts:
  - dpd-rds.cluster-ro-cbq4qy2gcxdj.ap-northeast-2.rds.amazonaws.com
  ports:
  - number: 3306
    name: mysql
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
